--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 Hello there, awesome person!
 <html>
+  <title>This is a title
+  </title>
   <body>
     Hello there, awesome person!
   </body>    
