--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 Hello there, awesome person!
 <html>
-  <title>This is a title
-  </title>
+  <title>This is a title</title>
   <body>
     Hello there, awesome person!
   </body>    
