--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 Hello there, awesome person!
 <html>
-  <title>This is a title</title>
-  <body>
-    Hello there, awesome person!
-  </body>    
+  <head>
+    <title>This is a title</title>
+    <body>
+      Hello there, awesome person!
+    </body>
+  </head>
 </html>
