--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ Hello there, awesome person!
     <title>This is a title</title>
   </head>
   <body>
+    <h1>This is a head.
+    </h1>
     Hello there, awesome person!    
   </body>
 </html>
