--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Hello there, awesome person!
 <html>
-  <img>http://pic26.nipic.com/20121221/9252150_142515375000_2.jpg
+  <imghttp://pic26.nipic.com/20121221/9252150_142515375000_2.jpg>
   <head>
     <title>This is a title</title>
   </head>
