--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Hello there, awesome person!
   </head>
   <body>
     <h1>This is a head.
-      <img http://pic26.nipic.com/20121221/9252150_142515375000_2.jpg>
+      <img src==http://pic26.nipic.com/20121221/9252150_142515375000_2.jpg>
     </h1>
     Hello there, awesome person!    
   </body>
