--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Hello there, awesome person!
   <body>
     <h1>This is a head.
     </h1>
-  <img src==http://pic26.nipic.com/20121221/9252150_142515375000_2.jpg>
+  <img src=="http://pic26.nipic.com/20121221/9252150_142515375000_2">
     Hello there, awesome person!    
   </body>
 </html>
